# stemgen-gui

./: .cursorrules  .gitignore  AGENT_GUIDE.md  AI_AGENT_TASK_LIST.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  TASKS.md  eslint.config.js  index.html  job_detail.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: SCREENSHOT_GUIDE.md
python/: requirements.txt  stemgen_sidecar.py
scripts/: release-prep.js
src/: App.tsx  index.css  main.tsx  vitest-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: converter.rs  decoder.rs  hasher.rs  mod.rs  resampler.rs  waveform.rs
src-tauri/src/commands/: audio.rs  db.rs  library.rs  metadata.rs  mod.rs  models.rs  separation.rs  sidecar.rs
src-tauri/src/stems/: metadata.rs  mod.rs  packer.rs  presets.rs  provenance.rs  staleness.rs
src-tauri/tests/: audio_utils.rs  packer.rs  presets.rs  stem_metadata.rs
src/__tests__/: App.test.tsx  regression.test.ts
src/__tests__/e2e/: app.spec.ts  helpers.ts
src/__tests__/integration/: FileBrowser.test.tsx  ProcessingQueue.test.tsx  SettingsPanel.test.tsx  StemMixer.test.tsx  setup.ts
src/components/: ErrorBoundary.tsx
src/components/__tests__/: ErrorBoundary.test.tsx
src/components/audio/: StemWaveformDisplay.tsx  WaveformDisplay.tsx  index.ts
src/components/audio/__tests__/: StemWaveformDisplay.test.tsx  WaveformDisplay.test.tsx
src/components/file-browser/: FileBrowser.tsx
src/components/history/: ProcessingHistory.tsx  index.ts
src/components/history/__tests__/: ProcessingHistory.test.tsx  index.test.ts
src/components/layout/: AppShell.tsx  Header.tsx  Sidebar.tsx  StatusBar.tsx
src/components/layout/__tests__/: Header.test.tsx  Sidebar.test.tsx  StatusBar.test.tsx
src/components/mixer/: StemMixer.tsx
src/components/mixer/__tests__/: StemMixer.unit.test.tsx
src/components/processing/: ProcessingQueue.tsx
src/components/settings/: ModelManager.tsx  SettingsPanel.tsx
src/components/settings/__tests__/: ModelManager.test.tsx  SettingsPanel.unit.test.tsx
src/components/setup/: FirstRunWizard.tsx
src/components/setup/__tests__/: FirstRunWizard.test.tsx
src/components/ui/: Button.tsx  Slider.tsx
src/components/ui/__tests__/: Button.test.tsx  Progress.test.tsx  Slider.test.tsx
src/hooks/: playerContext.tsx  useAudioPlayer.ts  useHealthCheck.ts  useKeyboardShortcuts.ts  useMultiStemPlayer.ts
src/hooks/__tests__/: playerContext.test.tsx  useHealthCheck.test.ts  useKeyboardShortcuts.test.ts
src/i18n/: de.json  en.json  index.ts
src/i18n/__tests__/: index.test.ts
src/lib/: constants.ts  plugin.ts  remote.ts  types.ts  utils.ts
src/lib/__tests__/: constants.test.ts  plugin.test.ts  remote.test.ts  utils.test.ts
src/lib/types/: library.ts
src/stores/: appStore.ts  libraryStore.ts  settingsStore.ts
src/stores/__tests__/: appStore.test.ts  settingsStore.test.ts
