[workspace]
resolver = "2"
members = ["src-tauri"]

[workspace.package]
version = "1.0.2"
authors = ["The Stemgen-GUI Contributors"]
edition = "2021"
rust-version = "1.70"
license = "GPL-3.0"
repository = "https://github.com/zenla5/stemgen-gui"
homepage = "https://github.com/zenla5/stemgen-gui"
description = "A free and open source stem file generator GUI"
keywords = ["audio", "stems", "dj", "traktor", "music"]
categories = ["audio", "multimedia"]

[workspace.dependencies]
# Core Tauri
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
# Audio processing
symphonia = { version = "0.5", features = ["all"] }
hound = "3.5"
rubato = "1"
audioadapter = "2"
audioadapter-buffers = "2"

# MP4/Stem format
mp4 = "0.14"

# Media metadata
lofty = "0.18"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP client (for inference providers)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Utilities
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
directories = "5"
which = "6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
