[package]
name = "stemgen-gui"
version = "1.0.10"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
name = "stemgen_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-fs.workspace = true
tauri-plugin-notification.workspace = true
tauri-plugin-os.workspace = true
tauri-plugin-process.workspace = true
tauri-plugin-shell.workspace = true
tauri-plugin-updater.workspace = true
tauri-plugin-window-state.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
directories.workspace = true
lofty.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
which.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true

# Audio processing
symphonia.workspace = true
hound.workspace = true
rubato.workspace = true
audioadapter.workspace = true
audioadapter-buffers.workspace = true

# MP4/Stem format
mp4.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
